# untropy

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pydocstyle.ini  Dockerfile  Dockerfile.arch  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  tag-on-version-change.yaml
src/untropy/: __init__.py
src/untropy/cli/: __init__.py  alias.py  cli.py  cookie.py  env.py
src/untropy/config/: __init__.py  load.py  model.py
src/untropy/utils/: jinja.py  log.py  log_setup.py  random_name.py
tests/: conftest.py  test_configuration.py
